--- a/models/colab/anyangle_phone_stand_colab_v2.ipynb
+++ b/models/colab/anyangle_phone_stand_colab_v2.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 255,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9j0I72eg7Nv",
-        "outputId": "bdd59487-47a2-48c4-9633-f34aa145b1cf"
+        "outputId": "c5faf523-512a-466a-c9c5-92460605df50"
       },
       "outputs": [
         {
@@ -52,7 +52,8 @@
           "text": [
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for fullcontrol (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ],
@@ -67,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 256,
+      "execution_count": 2,
       "metadata": {
         "id": "UIK9l6C6g7Nw"
       },
@@ -87,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 257,
+      "execution_count": 3,
       "metadata": {
         "id": "pnFBWutLg7Nx"
       },
@@ -126,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 258,
+      "execution_count": 4,
       "metadata": {
         "id": "SVHS_ghQg7Ny"
       },
@@ -137,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 259,
+      "execution_count": 17,
       "metadata": {
         "id": "sb2O-zA4g7Nz"
       },
@@ -388,14 +389,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 273,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "9de9f03f-6706-406a-9b94-5004983f3741"
+        "outputId": "fd8bc01d-d6a5-45c2-db9c-50c1aafbbaf1"
       },
       "outputs": [
         {
@@ -457,7 +458,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_5342d225-c3c3-46ee-b2be-f16e21a57552\", \"anyangle_phone_stand.gcode\", 1893152)"
+              "download(\"download_bd2a9de0-0682-4b93-8009-61533c5a1093\", \"anyangle_phone_stand.gcode\", 1891905)"
             ]
           },
           "metadata": {}
@@ -470,6 +471,8 @@
         "if target == 'gcode':\n",
         "    # add point at start of print for a nice lead-in line\n",
         "    steps.insert(0, fc.Point(x=0, y=0, z=steps[0].z))\n",
+        "    steps.insert(0, fc.Point(x=0, y=0, z=steps[0].z))\n",
+        "\n",
         "    # create the initialize procedure (i.e. start_gcode)\n",
         "    gcode_controls = fc.GcodeControls(\n",
         "        printer_name=printer_name,\n",
@@ -485,8 +488,10 @@
         "\n",
         "    # create the starting procedure\n",
         "    starting_procedure_steps = []\n",
+        "\n",
+        "    starting_procedure_steps.append(fc.ManualGcode(text='G90'))\n",
         "    starting_procedure_steps.append(fc.ManualGcode(text='G28 ; home all axes'))\n",
-        "    starting_procedure_steps.append(fc.ManualGcode(text='G1 Z0 F3000 ; move to bed level'))\n",
+        "    starting_procedure_steps.append(fc.ManualGcode(text='G1 Z10 F9000 ; move to bed level'))\n",
         "\n",
         "    # create the ending procedure\n",
         "    ending_procedure_steps = []\n",
@@ -526,7 +531,7 @@
       "metadata": {
         "id": "FfXb95-Hw2C5"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -638,10 +643,144 @@
         "\n"
       ],
       "metadata": {
-        "id": "bNM4TL8PwhY0"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "bNM4TL8PwhY0",
+        "outputId": "67d8b151-bf0d-4d32-f9e0-a104a6d7ef80"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_86f03f40-2431-46c3-876a-5ff85923272b\", \"middle_slice.svg\", 33498)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_29b4a5d6-7703-4ccf-81e1-1230b253dfac\", \"bottom_slice.svg\", 33490)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -750,7 +889,7 @@
       "metadata": {
         "id": "BJ8gqIBszXll"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -803,7 +942,7 @@
       "metadata": {
         "id": "GarRJqi3zurD"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
