--- a/models/colab/anyangle_phone_stand_colab_v2.ipynb
+++ b/models/colab/anyangle_phone_stand_colab_v2.ipynb
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9j0I72eg7Nv",
-        "outputId": "c5faf523-512a-466a-c9c5-92460605df50"
+        "outputId": "c6911366-ae58-479d-d360-fa26aa7b4582"
       },
       "outputs": [
         {
@@ -52,8 +52,7 @@
           "text": [
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for fullcontrol (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ],
@@ -68,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 41,
       "metadata": {
         "id": "UIK9l6C6g7Nw"
       },
@@ -88,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 42,
       "metadata": {
         "id": "pnFBWutLg7Nx"
       },
@@ -127,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 43,
       "metadata": {
         "id": "SVHS_ghQg7Ny"
       },
@@ -138,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 44,
       "metadata": {
         "id": "sb2O-zA4g7Nz"
       },
@@ -352,8 +351,6 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
         "# squash the design a bit so the phone expands it slightly and is therefore gripped better - proportionally reduce radius and increase arc length\n",
         "mydesign_squashed = []\n",
         "for i in range(len(mydesign_multilayer)):\n",
@@ -389,14 +386,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "evfJ6S5_g7N0",
-        "outputId": "fd8bc01d-d6a5-45c2-db9c-50c1aafbbaf1"
+        "outputId": "09a5aff5-1fed-47f1-a368-4c2a2f34ea08"
       },
       "outputs": [
         {
@@ -458,7 +455,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_bd2a9de0-0682-4b93-8009-61533c5a1093\", \"anyangle_phone_stand.gcode\", 1891905)"
+              "download(\"download_f4592ef9-f876-4997-87da-cf8326f7ac86\", \"71_anyangle_phone_stand.gcode\", 1892350)"
             ]
           },
           "metadata": {}
@@ -470,7 +467,6 @@
         "\n",
         "if target == 'gcode':\n",
         "    # add point at start of print for a nice lead-in line\n",
-        "    steps.insert(0, fc.Point(x=0, y=0, z=steps[0].z))\n",
         "    steps.insert(0, fc.Point(x=0, y=0, z=steps[0].z))\n",
         "\n",
         "    # create the initialize procedure (i.e. start_gcode)\n",
@@ -508,8 +504,12 @@
         "    steps = starting_procedure_steps + steps + ending_procedure_steps\n",
         "\n",
         "    gcode = fc.transform(steps, 'gcode', gcode_controls)\n",
-        "    open(f'{design_name}.gcode', 'w').write(gcode)\n",
-        "    files.download(f'{design_name}.gcode')\n",
+        "\n",
+        "    filename = f'{phone_width}_{design_name}.gcode'\n",
+        "    open(filename, 'w').write(gcode)\n",
+        "    files.download(filename)\n",
+        "\n",
+        "\n",
         "\n",
         "else:\n",
         "    # add annotations and plot\n",
@@ -531,7 +531,7 @@
       "metadata": {
         "id": "FfXb95-Hw2C5"
       },
-      "execution_count": 7,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -645,12 +645,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 17
         },
         "id": "bNM4TL8PwhY0",
-        "outputId": "67d8b151-bf0d-4d32-f9e0-a104a6d7ef80"
+        "outputId": "ad7618be-c895-43eb-c11a-dafb30b41096"
       },
-      "execution_count": 8,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -711,7 +711,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_86f03f40-2431-46c3-876a-5ff85923272b\", \"middle_slice.svg\", 33498)"
+              "download(\"download_f329b16c-dc97-4c06-99f8-a1c6d5fc7222\", \"middle_slice.svg\", 33498)"
             ]
           },
           "metadata": {}
@@ -775,7 +775,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_29b4a5d6-7703-4ccf-81e1-1230b253dfac\", \"bottom_slice.svg\", 33490)"
+              "download(\"download_0b1b7322-659c-4d4e-a04c-0eb6ded18d33\", \"bottom_slice.svg\", 33490)"
             ]
           },
           "metadata": {}
@@ -889,7 +889,7 @@
       "metadata": {
         "id": "BJ8gqIBszXll"
       },
-      "execution_count": 9,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -942,7 +942,7 @@
       "metadata": {
         "id": "GarRJqi3zurD"
       },
-      "execution_count": 10,
+      "execution_count": 49,
       "outputs": []
     },
     {
